[package]
name = "api-video"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["stream","multipart","json","blocking"] }
tokio = { version = "*", features = ["full"] }
serde_json={}
tokio-util = { version = "*", features = ["codec"] }
