[package]
name = "api_video"
version = "0.1.0"
edition = "2021"
authors = ["Satyam1Vishwakarma"]
description = "This is unofficial client for api.video written in Rust"
readme = "README.md"
license-file = "LICENSE"

keywords = ["api", "video","api_video"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["stream","multipart","json","blocking"] }
tokio = { version = "*", features = ["full"] }
serde_json={}
tokio-util = { version = "*", features = ["codec"] }
