[package]
name = "api_video"
version = "0.3.3"
edition = "2021"
authors = ["Satyam1Vishwakarma"]
description = "This is unofficial client for api.video written in Rust"
repository = "https://github.com/Satyam1Vishwakarma/rapi_video"
readme = "README.md"
license-file = "LICENSE"

keywords = ["api", "video","api_video"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["stream","multipart","json","blocking"] }
tokio = { version = "1.37.0", features = ["full"] }
serde_json={version = "1.0"}
tokio-util = { version = "0.7.10", features = ["codec"] }
